--- a/themes/hiker/layout/_partial/article.ejs
+++ b/themes/hiker/layout/_partial/article.ejs
@@ -33,7 +33,7 @@
       <% if (!index && theme.copyright.enable){ %>
       <%- partial('copyright') %>
       <% } %>
-      <% if (!index && post.comments && (theme.gentie_productKey || theme.duoshuo_shortname || theme.disqus_shortname || theme.uyan_uid || theme.wumii || theme.livere_shortname)){ %>
+      <% if (!index && post.comments && (theme.gentie_productKey || theme.duoshuo_shortname || theme.disqus_shortname || theme.uyan_uid || theme.wumii || theme.livere_shortname ||theme.gitalk)){ %>
         <%- partial('comment') %>
       <% } %>
       <% if (is_post()){ %>
