--- a/themes/hiker/layout/_partial/head.ejs
+++ b/themes/hiker/layout/_partial/head.ejs
@@ -21,6 +21,7 @@
   %>
   <title><% if (title){ %><%= __(title.toLowerCase()) %> | <% } %><%= config.title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="google-site-verification" content="mANfOePPBtqO-_WoNZwwa-NtiNHmai9nlOLD480FqJw" />
   <% if (page.keywords){ %>
     <meta name="keywords" content="<%- page.keywords %>" />
   <% } else if (theme.keywords){ %>
